начал разметку страницы

--- a/source/index.html
+++ b/source/index.html
@@ -4,14 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>template_maffin_build_0_1</title>
+  <title>Alt Home Загородные дома в аренду</title>
   <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/Roboto-Bold.woff2" as="font" crossorigin="anonymous">
   <link href="css/styles.min.css" rel="stylesheet">
 </head>
 
 <body>
+  <header class="page-header">
 
+  </header>
+
+  <main class="page-main">
+
+  </main>
+
+  <footer class="page-footer">
+
+  </footer>
 </body>
 
 </html>
