--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,32 @@
   </header>
 
   <main class="page-main">
-
+    <nav class="page-main__nav mavigation">
+      <ul class="navigation__list">
+        <li class="navigation__item"><a href="#" class="navigation__link">Место</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link">Каталог</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link">Оставить заявку</a></li>
+      </ul>
+    </nav>
+    <a href="#" class="page-main__logo logo logo--header">
+      <img src="" width="97" height="30" alt="Alt Home Загородные дома в аренду" class="logo__img">
+    </a>
+    <div class="page-main__subnav subnavigation">
+      <div class="subnavigation__item subnavigation__item--search search">
+        <form class="search__form" action="https://echo.htmlacademy.ru" method="GET">
+          <button class="search__btn" type="submit">
+            поиск
+          </button>
+          <label for="search" class="visually-hidden">Поиск</label>
+          <input class="search__input" type="text" name="search" id="search">
+        </form>
+      </div>
+      <div class="subnavigation__item personel">
+        <p class="personel__text">
+          <a href="#" class="personel__link">Вход</a> или <a href="#" class="personel__link">регистрация</a>
+        </p>
+      </div>
+    </div>
   </main>
 
   <footer class="page-footer">
