Перенес код из блока page-main в page-header

--- a/source/index.html
+++ b/source/index.html
@@ -12,21 +12,17 @@
 
 <body>
   <header class="page-header">
-
-  </header>
-
-  <main class="page-main">
-    <nav class="page-main__nav mavigation">
+    <nav class="page-header__nav mavigation">
       <ul class="navigation__list">
         <li class="navigation__item"><a href="#" class="navigation__link">Место</a></li>
         <li class="navigation__item"><a href="#" class="navigation__link">Каталог</a></li>
         <li class="navigation__item"><a href="#" class="navigation__link">Оставить заявку</a></li>
       </ul>
     </nav>
-    <a href="#" class="page-main__logo logo logo--header">
+    <a href="#" class="page-header__logo logo logo--header">
       <img src="" width="97" height="30" alt="Alt Home Загородные дома в аренду" class="logo__img">
     </a>
-    <div class="page-main__subnav subnavigation">
+    <div class="page-header__subnav subnavigation">
       <div class="subnavigation__item subnavigation__item--search search">
         <form class="search__form" action="https://echo.htmlacademy.ru" method="GET">
           <button class="search__btn" type="submit">
@@ -42,6 +38,10 @@
         </p>
       </div>
     </div>
+  </header>
+
+  <main class="page-main">
+
   </main>
 
   <footer class="page-footer">
