Разметил блоки promo slider social

--- a/source/index.html
+++ b/source/index.html
@@ -38,6 +38,48 @@
         </p>
       </div>
     </div>
+    <section class="page-header__promo promo">
+      <div class="promo__wrapper">
+        <h2 class="promo__title">Загородные дома в аренду</h2>
+        <p class="promo__text promo__text--place">Санкт-Петербург</p>
+        <p class="promo__text">Отдохните от суеты мегаполиса в уютном тёплом доме
+          в окружении экологически чистых лесов, рек и озёр</p>
+        <a href="#" class="promo__link button">Арендовать дом</a>
+      </div>
+      <div class="promo__wrapper promo__wrapper--slider slider">
+        <ul class="slider__list">
+          <li class="slider__item">
+            <img src="" width="795" height="496" alt="Фото загородного дома" class="slider__img">
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="page-header__social social">
+      <h2 class="visually-hidden">Наши социальные сети</h2>
+      <ul class="social__list">
+        <li class="social__item">
+          <a href="#" class="social__link social__link--facebook" aria-label="Страница Facebook">
+            <!-- <svg class="social__img social__img--facebook" width="15" height="28">
+              <use xlink:href="img/sprite.svg#icon-fb"></use>
+            </svg> -->
+          </a>
+        </li>
+        <li class="social__item">
+          <a href="#" class="social__link social__link--instagram" aria-label="Страница Instagramm">
+            <!-- <svg class="social__img social__img--insta" width="22" height="21">
+              <use xlink:href="img/sprite.svg#icon-insta"></use>
+            </svg> -->
+          </a>
+        </li>
+        <li class="social__item">
+          <a href="#" class="social__link social__link--twitter" aria-label="Страница Вконтакте">
+            <!-- <svg class="social__img social__img--twitter" width="23" height="20">
+              <use xlink:href="img/sprite.svg#icon-twitter"></use>
+            </svg> -->
+          </a>
+        </li>
+      </ul>
+    </section>
   </header>
 
   <main class="page-main">
