Разметил блок place

--- a/source/index.html
+++ b/source/index.html
@@ -83,7 +83,37 @@
   </header>
 
   <main class="page-main">
-
+    <section class="page-main__place place">
+      <h2 class="place__title title">01 Место</h2>
+      <p class="place__text place__text--subtitle">Парк отдыха на берегу Ладожского озера</p>
+      <p class="place__text">Отдохните в уютных деревянных домах с камином, сауной и джакузи, расположенных на берегу
+        озера. Для любителей полного уединения есть домики
+        и в глубине парка, в окружении вековых деревьев.</p>
+      <img src="" alt="Фото заснеженного дома на беругу озера среди елей" class="place__img place__img--min">
+      <p class="place__text place__text--notice">За счёт особой конструкции в наших домах очень тепло зимой и прохладно
+        летом. Мы открыты
+        для вас в любое время года!</p>
+      <p class="place__text">На территории парка есть баскетбольная площадка, собственный пляж с сеткой для волейбола,
+        прокат горных велосипедов и лодок. А зимой у нас можно взять в прокат лыжи или снегоходы и кататься по
+        специально оборудованным трассам. Для каждого посетителя составляем индивидуальную программу развлечений и
+        помогаем её осуществить.</p>
+      <img src="" alt="Фото игры в волейбол на улице" class="place__img place__img--max">
+      <p class="place__text">Около каждого коттеджа есть детская площадка с качелями и горками, а на территории парка
+        работает детская комната. Вы сможете позволить себе любой отдых
+        зная, что ваш ребёнок находится под присмотром опытных специалистов.</p>
+      <p class="place__text place__text--note">Мы предлагаем не только уютные дома, большой выбор развлечений и
+        активностей для вас и вашей семьи, но и масштабные праздники, спортивные турниры и возможность встретить новых
+        друзей.</p>
+      <p class="place__text">Несмотря на отдалённость от населённых пунктов, вы не будете чувствовать себя оторванными
+        от цивилизации. Все наши дома оборудованы высокоскоростными точками доступа Wi-Fi
+        и домашними кинотеатрами с подпиской Netflix.</p>
+      <p class="place__text place__text--notice">Вы можете подписаться на рассылку и узнавать обо всех акциях, скидках,
+        и выгодных предложениях.</p>
+      <p class="place__text">Приезжайте к нам на месяц, всё лето или зиму —
+        на длительную аренду действуют хорошие скидки! Забронируйте дом прямо сейчас, для этого достаточно заказать
+        звонок, а отменить бронь вы сможете в любое время совершенно бесплатно.</p>
+      <a href="" class="place__link button">Бесплатно забронировать</a>
+    </section>
   </main>
 
   <footer class="page-footer">
