--- a/source/index.html
+++ b/source/index.html
@@ -237,6 +237,57 @@
         </li>
       </ul>
     </section>
+    <section class="page-main__request request">
+      <h2 class="request__title title">03 Оставить заявку</h2>
+      <h3 class="request__subtitle subtitle">Мы свяжемся с вами</h3>
+      <form action="https://echo.htmlacademy.ru" method="POST" request__form form>
+        <fieldset class="form__box">
+          <legend class="visually-hidden">Как к вам обращаться</legend>
+          <div class="form__wrapper">
+            <label for="status" class="form__title">Обращение</label>
+            <select name="status" id="status" class="form__input form__input--status">
+              <option value="mister">Мистер</option>
+              <option value="mister">Мисс</option>
+              <option value="mister">Миссис</option>
+            </select>
+          </div>
+          <div class="form__wrapper">
+            <label for="name" class="form__title">Имя</label>
+            <input type="text" name="name" id="name" placeholder="Джон">
+          </div>
+          <div class="form__wrapper">
+            <label for="surname" class="form__title">Фамилия</label>
+            <input type="text" name="surname" id="surname" placeholder="Смит">
+          </div>
+        </fieldset>
+        <fieldset class="form__box">
+          <legend class="visually-hidden">Ваши контакты</legend>
+          <div class="form__wrapper">
+            <label for="email" class="form__title">E-mail</label>
+            <input type="email" name="email" id="email" placeholder="johnsmith@gmail.com">
+          </div>
+          <div class="form__wrapper">
+            <label for="phone" class="form__title">E-mail</label>
+            <input type="tel" name="phone" id="phone" placeholder="+7 999 999-99-99"
+              pattern="8\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}">
+          </div>
+        </fieldset>
+        <fieldset class="form__box">
+          <legend class="visually-hidden">Согласия</legend>
+          <label class="form__name form__name--color">
+            <input class="form__check visually-hidden" type="checkbox" name="personel" value="agree">
+            <span class="form__box form__box"></span>
+            <span class="form__title">Согласие на обработку персональных данных</span>
+          </label>
+          <label class="form__name form__name--color">
+            <input class="form__check visually-hidden" type="checkbox" name="subscribe" value="agree" checked>
+            <span class="form__box form__box"></span>
+            <span class="form__title">Подписка на рассылку</span>
+          </label>
+        </fieldset>
+        <button type="submit" class="form__button button">Отправить</button>
+      </form>
+    </section>
   </main>
 
   <footer class="page-footer">
