Добавление, подключение новых и удаление дефолтных шрифтов

--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alt Home Загородные дома в аренду</title>
-  <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Roboto-Bold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/Montserrat-Bold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/fonts/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
   <link href="css/styles.min.css" rel="stylesheet">
 </head>
 
