--- a/source/index.html
+++ b/source/index.html
@@ -14,33 +14,35 @@
 
 <body>
   <header class="page-header">
-    <nav class="page-header__nav navigation">
-      <ul class="navigation__list">
-        <li class="navigation__item"><a href="#" class="navigation__link">Место</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">Каталог</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">Оставить заявку</a></li>
-      </ul>
-    </nav>
-    <a href="#" class="page-header__logo logo logo--header">
-      <img src="" width="97" height="30" alt="Alt Home Загородные дома в аренду" class="logo__img">
-    </a>
-    <div class="page-header__subnav subnavigation">
-      <div class="subnavigation__item subnavigation__item--search search">
-        <form class="search__form" action="https://echo.htmlacademy.ru" method="GET">
-          <button class="search__btn" type="submit">
-            поиск
-          </button>
-          <label for="search" class="visually-hidden">Поиск</label>
-          <input class="search__input" type="text" name="search" id="search">
-        </form>
-      </div>
-      <div class="subnavigation__item personel">
-        <p class="personel__text">
-          <a href="#" class="personel__link">Вход</a> или <a href="#" class="personel__link">регистрация</a>
-        </p>
+    <div class="page-header__wrapper container">
+      <nav class="page-header__nav navigation">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#" class="navigation__link">Место</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Каталог</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Оставить заявку</a></li>
+        </ul>
+      </nav>
+      <a href="#" class="page-header__logo logo logo--header">
+        <img src="" width="97" height="30" alt="Alt Home Загородные дома в аренду" class="logo__img">
+      </a>
+      <div class="page-header__subnav subnavigation">
+        <div class="subnavigation__item subnavigation__item--search search">
+          <form class="search__form" action="https://echo.htmlacademy.ru" method="GET">
+            <button class="search__btn" type="submit">
+              поиск
+            </button>
+            <label for="search" class="visually-hidden">Поиск</label>
+            <input class="search__input" type="text" name="search" id="search">
+          </form>
+        </div>
+        <div class="subnavigation__item personel">
+          <p class="personel__text">
+            <a href="#" class="personel__link">Вход</a> или <a href="#" class="personel__link">регистрация</a>
+          </p>
+        </div>
       </div>
     </div>
-    <section class="page-header__promo promo">
+    <section class="page-header__promo promo container">
       <div class="promo__wrapper">
         <h2 class="promo__title">Загородные дома в аренду</h2>
         <p class="promo__text promo__text--place">Санкт-Петербург</p>
@@ -56,7 +58,7 @@
         </ul>
       </div>
     </section>
-    <section class="page-header__social social">
+    <section class="page-header__social social container">
       <h2 class="visually-hidden">Наши социальные сети</h2>
       <ul class="social__list">
         <li class="social__item">
