стилизовал блок logo

--- a/source/index.html
+++ b/source/index.html
@@ -22,9 +22,11 @@
           <li class="navigation__item"><a href="#" class="navigation__link">Оставить заявку</a></li>
         </ul>
       </nav>
-      <a href="#" class="page-header__logo logo logo--header">
-        <img src="" width="97" height="30" alt="Alt Home Загородные дома в аренду" class="logo__img">
-      </a>
+      <div class="page-header__logo logo">
+        <a class="logo__link">
+          <img src="img/logo.svg" width="97" height="30" alt="Alt Home Загородные дома в аренду" class="logo__img">
+        </a>
+      </div>
       <div class="page-header__subnav subnavigation">
         <div class="subnavigation__item subnavigation__item--search search">
           <form class="search__form" action="https://echo.htmlacademy.ru" method="GET">
