--- a/source/index.html
+++ b/source/index.html
@@ -51,9 +51,9 @@
       </div>
     </div>
     <section class="page-header__promo promo container">
-      <div class="promo__wrapper">
-        <h2 class="promo__title">Загородные дома в аренду</h2>
+      <div class="promo__wrapper promo__wrapper--text">
         <p class="promo__text promo__text--place">Санкт-Петербург</p>
+        <h1 class="promo__title">Загородные дома в аренду</h1>
         <p class="promo__text">Отдохните от суеты мегаполиса в уютном тёплом доме
           в окружении экологически чистых лесов, рек и озёр</p>
         <a href="#" class="promo__link button">Арендовать дом</a>
@@ -61,7 +61,11 @@
       <div class="promo__wrapper promo__wrapper--slider slider">
         <ul class="slider__list">
           <li class="slider__item">
-            <img src="" width="795" height="496" alt="Фото загородного дома" class="slider__img">
+            <picture>
+              <source type="image/webp" srcset="img/image_home_1@1x.webp 1x, img/image_home_1@2x.webp 2x">
+              <img src="img/image_home_1@1x.jpg" srcset="img/image_home_1@2x.jpg 2x" width="795" height="496"
+                alt="Фото загородного дома" class="slider__img">
+            </picture>
           </li>
         </ul>
       </div>
