--- a/source/index.html
+++ b/source/index.html
@@ -57,6 +57,32 @@
         <p class="promo__text">Отдохните от суеты мегаполиса в уютном тёплом доме
           в окружении экологически чистых лесов, рек и озёр</p>
         <a href="#" class="promo__link button">Арендовать дом</a>
+        <div class="promo__social social">
+          <h2 class="visually-hidden">Наши социальные сети</h2>
+          <ul class="social__list">
+            <li class="social__item">
+              <a href="#" class="social__link social__link--facebook" aria-label="Страница Facebook">
+                <svg class="social__img social__img--facebook" width="44" height="44">
+                  <use xlink:href="img/sprite.svg#icon-fb"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__link social__link--instagram" aria-label="Страница Instagramm">
+                <svg class="social__img social__img--insta" width="44" height="44">
+                  <use xlink:href="img/sprite.svg#icon-ig"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__link social__link--vkontakte" aria-label="Страница Вконтакте">
+                <svg class="social__img social__img--vkontakte" width="44" height="44">
+                  <use xlink:href="img/sprite.svg#icon-vk"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="promo__wrapper promo__wrapper--slider slider">
         <ul class="slider__list">
@@ -69,32 +95,6 @@
           </li>
         </ul>
       </div>
-    </section>
-    <section class="page-header__social social container">
-      <h2 class="visually-hidden">Наши социальные сети</h2>
-      <ul class="social__list">
-        <li class="social__item">
-          <a href="#" class="social__link social__link--facebook" aria-label="Страница Facebook">
-            <!-- <svg class="social__img social__img--facebook" width="15" height="28">
-              <use xlink:href="img/sprite.svg#icon-fb"></use>
-            </svg> -->
-          </a>
-        </li>
-        <li class="social__item">
-          <a href="#" class="social__link social__link--instagram" aria-label="Страница Instagramm">
-            <!-- <svg class="social__img social__img--insta" width="22" height="21">
-              <use xlink:href="img/sprite.svg#icon-insta"></use>
-            </svg> -->
-          </a>
-        </li>
-        <li class="social__item">
-          <a href="#" class="social__link social__link--twitter" aria-label="Страница Вконтакте">
-            <!-- <svg class="social__img social__img--twitter" width="23" height="20">
-              <use xlink:href="img/sprite.svg#icon-twitter"></use>
-            </svg> -->
-          </a>
-        </li>
-      </ul>
     </section>
   </header>
 
