--- a/source/index.html
+++ b/source/index.html
@@ -94,6 +94,19 @@
             </picture>
           </li>
         </ul>
+        <div class="slider__control">
+          <button class="slider__btn slider__btn--prev slider__btn--not-active">
+            <svg class="slider__icon" width="30" height="16">
+              <use xlink:href="img/sprite.svg#icon-arrow"></use>
+            </svg>
+          </button>
+          <button class="slider__btn slider__btn--next">
+            <svg class="slider__icon slider__icon--next" width="30" height="16">
+              <use xlink:href="img/sprite.svg#icon-arrow"></use>
+            </svg>
+          </button>
+          <p class="slider__text">1/8</p>
+        </div>
       </div>
     </section>
   </header>
