--- a/source/index.html
+++ b/source/index.html
@@ -111,9 +111,9 @@
     </section>
   </header>
 
-  <main class="page-main">
+  <main class="page-main container">
     <section class="page-main__place place">
-      <h2 class="place__title title">01 Место</h2>
+      <h2 class="place__title title">Место</h2>
       <h3 class="place__subtitle subtitle">Парк отдыха на берегу Ладожского озера</h3>
       <p class="place__text">Отдохните в уютных деревянных домах с камином, сауной и джакузи, расположенных на берегу
         озера. Для любителей полного уединения есть домики
@@ -146,7 +146,7 @@
         <a href="" class="place__link button">Бесплатно забронировать</a>
     </section>
     <section class="page-main__catalog catalog">
-      <h2 class="catalog__title title">02 Каталог</h2>
+      <h2 class="catalog__title title">Каталог</h2>
       <h3 class="catalog__subtitle subtitle">Дома для аренды</h3>
       <ul class="catalog__list">
         <li class="catalog__item">
@@ -267,7 +267,7 @@
       </ul>
     </section>
     <section class="page-main__request request">
-      <h2 class="request__title title">03 Оставить заявку</h2>
+      <h2 class="request__title title">Оставить заявку</h2>
       <h3 class="request__subtitle subtitle">Мы свяжемся с вами</h3>
       <form action="https://echo.htmlacademy.ru" method="POST" request__form form>
         <fieldset class="form__box">
