--- a/source/index.html
+++ b/source/index.html
@@ -133,17 +133,17 @@
         зная, что ваш ребёнок находится под присмотром опытных специалистов.</p>
       <blockquote class="place__blockquote">Мы предлагаем не только уютные дома, большой выбор развлечений и
         активностей для вас и вашей семьи, но и масштабные праздники, спортивные турниры и возможность встретить новых
-        друзей.</p>
-        <p class="place__text">Несмотря на отдалённость от населённых пунктов, вы не будете чувствовать себя оторванными
-          от цивилизации. Все наши дома оборудованы высокоскоростными точками доступа Wi-Fi
-          и домашними кинотеатрами с подпиской Netflix.</p>
-        <p class="place__text place__text--aside-left">Вы можете подписаться на рассылку и узнавать обо всех акциях,
-          скидках,
-          и выгодных предложениях.</p>
-        <p class="place__text">Приезжайте к нам на месяц, всё лето или зиму —
-          на длительную аренду действуют хорошие скидки! Забронируйте дом прямо сейчас, для этого достаточно заказать
-          звонок, а отменить бронь вы сможете в любое время совершенно бесплатно.</p>
-        <a href="" class="place__link button">Бесплатно забронировать</a>
+        друзей.</blockquote>
+      <p class="place__text">Несмотря на отдалённость от населённых пунктов, вы не будете чувствовать себя оторванными
+        от цивилизации. Все наши дома оборудованы высокоскоростными точками доступа Wi-Fi
+        и домашними кинотеатрами с подпиской Netflix.</p>
+      <p class="place__text place__text--aside-left">Вы можете подписаться на рассылку и узнавать обо всех акциях,
+        скидках,
+        и выгодных предложениях.</p>
+      <p class="place__text">Приезжайте к нам на месяц, всё лето или зиму —
+        на длительную аренду действуют хорошие скидки! Забронируйте дом прямо сейчас, для этого достаточно заказать
+        звонок, а отменить бронь вы сможете в любое время совершенно бесплатно.</p>
+      <a href="" class="place__link button">Бесплатно забронировать</a>
     </section>
     <section class="page-main__catalog catalog">
       <h2 class="catalog__title title">Каталог</h2>
