Добавил кадрирование изображений блок place

--- a/source/index.html
+++ b/source/index.html
@@ -118,7 +118,14 @@
       <p class="place__text">Отдохните в уютных деревянных домах с камином, сауной и джакузи, расположенных на берегу
         озера. Для любителей полного уединения есть домики
         и в глубине парка, в окружении вековых деревьев.</p>
-      <img src="" alt="Фото заснеженного дома на беругу озера среди елей" class="place__img place__img--min">
+      <div class="place__img-box place__img-box--min">
+        <picture>
+          <source type="image/webp" srcset="img/image_home_2@1x.webp 1x, img/image_home_2@2x.webp 2x">
+          <img src="img/image_home_2@1x.jpg" width="444" height="280"
+            alt="Фото заснеженного дома на беругу озера среди елей" class="place__img" srcset="
+            img/image_home_2@2x.jpg 2x">
+        </picture>
+      </div>
       <p class="place__text place__text--aside-right">За счёт особой конструкции в наших домах очень тепло зимой и
         прохладно
         летом. Мы открыты
@@ -127,7 +134,13 @@
         прокат горных велосипедов и лодок. А зимой у нас можно взять в прокат лыжи или снегоходы и кататься по
         специально оборудованным трассам. Для каждого посетителя составляем индивидуальную программу развлечений и
         помогаем её осуществить.</p>
-      <img src="" alt="Фото игры в волейбол на улице" class="place__img place__img--max">
+      <div class="place__img-box place__img-box--max">
+        <picture>
+          <source type="image/webp" srcset="img/image_valleyball@1x.webp 1x, img/image_valleyball@2x.webp 2x">
+          <img src="img/image_valleyball@1x.jpg" width="1146" height="280" alt="Фото игры в волейбол на улице"
+            class="place__img place__img--max" srcset="img/image_valleyball@2x.jpg 2x">
+        </picture>
+      </div>
       <p class="place__text">Около каждого коттеджа есть детская площадка с качелями и горками, а на территории парка
         работает детская комната. Вы сможете позволить себе любой отдых
         зная, что ваш ребёнок находится под присмотром опытных специалистов.</p>
