--- a/source/index.html
+++ b/source/index.html
@@ -127,9 +127,7 @@
         </picture>
       </div>
       <p class="place__text place__text--aside-right">За счёт особой конструкции в наших домах очень тепло зимой и
-        прохладно
-        летом. Мы открыты
-        для вас в любое время года!</p>
+        прохладно летом. Мы открыты для вас в любое время года!</p>
       <p class="place__text">На территории парка есть баскетбольная площадка, собственный пляж с сеткой для волейбола,
         прокат горных велосипедов и лодок. А зимой у нас можно взять в прокат лыжи или снегоходы и кататься по
         специально оборудованным трассам. Для каждого посетителя составляем индивидуальную программу развлечений и
