Стилизация блок catalog properties

--- a/source/index.html
+++ b/source/index.html
@@ -243,10 +243,10 @@
               <img class="catalog__img" src="img/image_catalog_5@1x.jpg" width="327" height="198"
                 alt="Фото лесного дом у пруда" srcset="img/image_catalog_5@2x.jpg 2x">
             </picture>
-            <div class="catalog__inner">
+            <div class="catalog__inner catalog__inner--vertical">
               <h4 class="catalog__item-name">Лесной дом у пруда</h4>
               <p class="catalog__text">Площадь — 81 м2</p>
-              <dl class="catalog__description properties">
+              <dl class="catalog__description properties properties--vertical">
                 <dt class="properties__item">комнаты</dt>
                 <dd class="properties__description">3</dd>
                 <dt class="properties__item">спальни</dt>
