Добавление плавного скрола при  перемещении по ссылкам

--- a/source/index.html
+++ b/source/index.html
@@ -17,9 +17,9 @@
     <div class="page-header__wrapper container">
       <nav class="page-header__nav navigation">
         <ul class="navigation__list">
-          <li class="navigation__item"><a href="#" class="navigation__link">Место</a></li>
-          <li class="navigation__item"><a href="#" class="navigation__link">Каталог</a></li>
-          <li class="navigation__item"><a href="#" class="navigation__link">Оставить заявку</a></li>
+          <li class="navigation__item"><a href="#place" class="navigation__link">Место</a></li>
+          <li class="navigation__item"><a href="#catalog" class="navigation__link">Каталог</a></li>
+          <li class="navigation__item"><a href="#request" class="navigation__link">Оставить заявку</a></li>
         </ul>
       </nav>
       <div class="page-header__logo logo">
@@ -112,7 +112,7 @@
   </header>
 
   <main class="page-main">
-    <section class="page-main__place place container">
+    <section class="page-main__place place container" id="place">
       <h2 class="place__title title">Место</h2>
       <h3 class="place__subtitle subtitle">Парк отдыха на берегу Ладожского озера</h3>
       <p class="place__text">Отдохните в уютных деревянных домах с камином, сауной и джакузи, расположенных на берегу
@@ -156,7 +156,7 @@
         звонок, а отменить бронь вы сможете в любое время совершенно бесплатно.</p>
       <a href="" class="place__link button">Бесплатно забронировать</a>
     </section>
-    <section class="page-main__catalog catalog">
+    <section class="page-main__catalog catalog" id="catalog">
       <div class="catalog__wrapper container">
         <h2 class="catalog__title title">Каталог</h2>
         <h3 class="catalog__subtitle subtitle">Дома для аренды</h3>
@@ -260,7 +260,7 @@
       </ul>
       </div>
     </section>
-    <section class="page-main__request request">
+    <section class="page-main__request request" id="request">
       <h2 class="request__title title">Оставить заявку</h2>
       <h3 class="request__subtitle subtitle">Мы свяжемся с вами</h3>
       <form action="https://echo.htmlacademy.ru" method="POST" request__form form>
