--- a/source/index.html
+++ b/source/index.html
@@ -278,11 +278,11 @@
               </div>
               <div class="form__inner">
                 <label for="name" class="form__title">Имя</label>
-                <input type="text" name="name" id="name" placeholder="Джон" class="form__input">
+                <input type="text" name="name" id="name" placeholder="Джон" class="form__input" required>
               </div>
               <div class="form__inner">
                 <label for="surname" class="form__title">Фамилия</label>
-                <input type="text" name="surname" id="surname" placeholder="Смит" class="form__input">
+                <input type="text" name="surname" id="surname" placeholder="Смит" class="form__input" required>
               </div>
             </div>
           </fieldset>
@@ -291,12 +291,14 @@
             <div class="form__wrapper form__wrapper--contacts">
               <div class="form__inner">
                 <label for="email" class="form__title">E-mail</label>
-                <input type="email" name="email" id="email" placeholder="johnsmith@gmail.com" class="form__input">
+                <input type="email" name="email" id="email" placeholder="johnsmith@gmail.com" class="form__input"
+                  required>
               </div>
               <div class="form__inner">
                 <label for="phone" class="form__title">Телефон</label>
                 <input type="tel" name="phone" id="phone" placeholder="+7 999 999-99-99"
-                  pattern="8\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}" class="form__input">
+                  pattern="8\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}" class="form__input"
+                  required>
               </div>
             </div>
           </fieldset>
