правка разметки блок form

--- a/source/index.html
+++ b/source/index.html
@@ -306,12 +306,12 @@
             <legend class="visually-hidden">Согласия</legend>
             <label class="form__name form__name--color">
               <input class="form__check visually-hidden" type="checkbox" name="personel" value="agree">
-              <span class="form__box form__box"></span>
+              <span class="form__box"></span>
               <span class="form__title">Согласие на обработку персональных данных</span>
             </label>
             <label class="form__name form__name--color">
               <input class="form__check visually-hidden" type="checkbox" name="subscribe" value="agree" checked>
-              <span class="form__box form__box"></span>
+              <span class="form__box"></span>
               <span class="form__title">Подписка на рассылку</span>
             </label>
           </fieldset>
