--- a/source/index.html
+++ b/source/index.html
@@ -304,16 +304,18 @@
           </fieldset>
           <fieldset class="form__box">
             <legend class="visually-hidden">Согласия</legend>
-            <label class="form__name form__name--color">
-              <input class="form__check visually-hidden" type="checkbox" name="personel" value="agree">
-              <span class="form__box"></span>
-              <span class="form__title">Согласие на обработку персональных данных</span>
-            </label>
-            <label class="form__name form__name--color">
-              <input class="form__check visually-hidden" type="checkbox" name="subscribe" value="agree" checked>
-              <span class="form__box"></span>
-              <span class="form__title">Подписка на рассылку</span>
-            </label>
+            <div class="form__wrapper form__wrapper--consent">
+              <label class="form__name form__name--consent">
+                <input class="form__check visually-hidden" type="checkbox" name="personel" value="agree">
+                <span class="form__checkbox"></span>
+                <span class="form__title form__title--consent">Согласие на обработку персональных данных</span>
+              </label>
+              <label class="form__name form__name--consent">
+                <input class="form__check visually-hidden" type="checkbox" name="subscribe" value="agree" checked>
+                <span class="form__checkbox"></span>
+                <span class="form__title form__title--consent">Подписка на рассылку</span>
+              </label>
+            </div>
           </fieldset>
           <button type="submit" class="form__button button">Отправить</button>
         </form>
