--- a/source/index.html
+++ b/source/index.html
@@ -325,19 +325,21 @@
   </main>
 
   <footer class="page-footer">
-    <a href="#" class="page-footer__logo logo">
-      <img src="" width="97" height="30" alt="Alt Home Загородные дома в аренду" class="logo__img">
-    </a>
-    <div class="page-footer__nav navigation">
-      <ul class="navigation__list">
-        <li class="navigation__item"><a href="#" class="navigation__link">Место</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">Каталог</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">Оставить заявку</a></li>
-      </ul>
-    </div>
-    <div class="pahe-footer copyright">
-      <p class="copyright__text">© Сделано в <a href="https://htmlacademy.ru" class="copyright__link">HTML Academy</a>
-      </p>
+    <div class="page-footer__wrapper container">
+      <a href="#" class="page-footer__logo logo">
+        <img src="img/logo-footer.svg" width="97" height="30" alt="Alt Home Загородные дома в аренду" class="logo__img">
+      </a>
+      <div class="page-footer__nav navigation">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#" class="navigation__link">Место</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Каталог</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Оставить заявку</a></li>
+        </ul>
+      </div>
+      <div class="pahe-footer copyright">
+        <p class="copyright__text">© Сделано в <a href="https://htmlacademy.ru" class="copyright__link">HTML Academy</a>
+        </p>
+      </div>
     </div>
   </footer>
 </body>
