--- a/source/index.html
+++ b/source/index.html
@@ -342,6 +342,14 @@
       </div>
     </div>
   </footer>
+
+  <div class="page-up">
+    <button type="button" class="page-up__btn">
+      <svg class="page-up__icon" width="30" height="16">
+        <use xlink:href="img/sprite.svg#icon-arrow"></use>
+      </svg>
+    </button>
+  </div>
 </body>
 
 </html>
