Стилизация по PP

--- a/source/index.html
+++ b/source/index.html
@@ -52,7 +52,7 @@
       <div class="promo__wrapper promo__wrapper--text">
         <p class="promo__text promo__text--place">Санкт-Петербург</p>
         <h1 class="promo__title">Загородные дома в аренду</h1>
-        <p class="promo__text">Отдохните от суеты мегаполиса в уютном тёплом доме
+        <p class="promo__text">Отдохните от суеты мегаполиса в уютном тёплом доме<br>
           в окружении экологически чистых лесов, рек и озёр</p>
         <a href="#" class="promo__link button">Арендовать дом</a>
         <div class="promo__social social">
@@ -114,7 +114,7 @@
       <h2 class="place__title title">Место</h2>
       <h3 class="place__subtitle subtitle">Парк отдыха на берегу Ладожского озера</h3>
       <p class="place__text">Отдохните в уютных деревянных домах с камином, сауной и джакузи, расположенных на берегу
-        озера. Для любителей полного уединения есть домики
+        озера. Для любителей полного уединения есть домики<br>
         и в глубине парка, в окружении вековых деревьев.</p>
       <div class="place__img-box place__img-box--min">
         <picture>
@@ -137,19 +137,20 @@
             class="place__img place__img--max" srcset="img/image_valleyball@2x.jpg 2x">
         </picture>
       </div>
-      <p class="place__text">Около каждого коттеджа есть детская площадка с качелями и горками, а на территории парка
+      <p class="place__text">Около каждого коттеджа есть детская площадка<br> с качелями и горками, а на территории
+        парка
         работает детская комната. Вы сможете позволить себе любой отдых
         зная, что ваш ребёнок находится под присмотром опытных специалистов.</p>
       <blockquote class="place__blockquote">Мы предлагаем не только уютные дома, большой выбор развлечений и
         активностей для вас и вашей семьи, но и масштабные праздники, спортивные турниры и возможность встретить новых
         друзей.</blockquote>
-      <p class="place__text">Несмотря на отдалённость от населённых пунктов, вы не будете чувствовать себя оторванными
-        от цивилизации. Все наши дома оборудованы высокоскоростными точками доступа Wi-Fi
+      <p class="place__text">Несмотря на отдалённость от населённых пунктов, вы не будете чувствовать себя
+        оторванными<br>
+        от цивилизации. Все наши дома оборудованы высокоскоростными точками доступа Wi-Fi<br>
         и домашними кинотеатрами с подпиской Netflix.</p>
-      <p class="place__text place__text--aside-left">Вы можете подписаться на рассылку и узнавать обо всех акциях,
-        скидках,
-        и выгодных предложениях.</p>
-      <p class="place__text">Приезжайте к нам на месяц, всё лето или зиму —
+      <p class="place__text place__text--aside-left">Вы можете подписаться<br> на рассылку и узнавать<br> обо всех
+        акциях, скидках,<br>и выгодных предложениях.</p>
+      <p class="place__text">Приезжайте к нам на месяц, всё лето или зиму —<br>
         на длительную аренду действуют хорошие скидки! Забронируйте дом прямо сейчас, для этого достаточно заказать
         звонок, а отменить бронь вы сможете в любое время совершенно бесплатно.</p>
       <a href="" class="place__link button">Бесплатно забронировать</a>
