Правка по критериям Разметки

--- a/source/index.html
+++ b/source/index.html
@@ -164,7 +164,7 @@
             <picture>
               <source type="image/webp" srcset="img/image_catalog_1@1x.webp 1x, img/image_catalog_1@2x.webp 2x">
               <img class="catalog__img" src="img/image_catalog_1@1x.jpg" width="327" height="220"
-                alt="Фото лесного дом у пруда" srcset="img/image_catalog_1@2x.jpg 2x">
+                alt="Фото современного дома" srcset="img/image_catalog_1@2x.jpg 2x">
             </picture>
             <div class="catalog__inner">
               <h4 class="catalog__item-name">Современная классика</h4>
@@ -183,7 +183,7 @@
             <picture>
               <source type="image/webp" srcset="img/image_catalog_2@1x.webp 1x, img/image_catalog_2@2x.webp 2x">
               <img class="catalog__img" src="img/image_catalog_1@2x.jpg" width="327" height="220"
-                alt="Фото лесного дом у пруда" srcset="img/image_catalog_2@2x.jpg 2x">
+                alt="Фото дома на берегу озера" srcset="img/image_catalog_2@2x.jpg 2x">
             </picture>
             <div class="catalog__inner">
               <h4 class="catalog__item-name">Дом на берегу озера</h4>
@@ -202,7 +202,7 @@
             <picture>
               <source type="image/webp" srcset="img/image_catalog_3@1x.webp 1x, img/image_catalog_3@2x.webp 2x">
               <img class="catalog__img" src="img/image_catalog_3@1x.jpg" width="327" height="220"
-                alt="Фото лесного дом у пруда" srcset="img/image_catalog_3@2x.jpg 2x">
+                alt="Фото особняка в лесу" srcset="img/image_catalog_3@2x.jpg 2x">
             </picture>
             <div class="catalog__inner">
               <h4 class="catalog__item-name">Особняк в лесу</h4>
@@ -221,7 +221,7 @@
             <picture>
               <source type="image/webp" srcset="img/image_catalog_4@1x.webp 1x, img/image_catalog_4@2x.webp 2x">
               <img class="catalog__img" src="img/image_catalog_4@1x.jpg" width="327" height="220"
-                alt="Фото лесного дом у пруда" srcset="img/image_catalog_4@2x.jpg 2x">
+                alt="Фото домика на дереве" srcset="img/image_catalog_4@2x.jpg 2x">
             </picture>
             <div class="catalog__inner">
               <h4 class="catalog__item-name">Домик на дереве</h4>
@@ -252,11 +252,10 @@
                 <dd class="properties__description">2</dd>
                 <dt class="properties__item">этаж</dt>
                 <dd class="properties__description">1</dd>
+              </dl>
             </div>
-            </dl>
-      </div>
-      </li>
-      </ul>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="page-main__request request container" id="request">
@@ -277,11 +276,11 @@
               </div>
               <div class="form__inner">
                 <label for="name" class="form__title">Имя</label>
-                <input type="text" name="name" id="name" placeholder="Джон" class="form__input js-form__input" required>
+                <input type="text" name="name" id="name" placeholder="Джон" class="form__input js-form-input" required>
               </div>
               <div class="form__inner">
                 <label for="surname" class="form__title">Фамилия</label>
-                <input type="text" name="surname" id="surname" placeholder="Смит" class="form__input js-form__input"
+                <input type="text" name="surname" id="surname" placeholder="Смит" class="form__input js-form-input"
                   required>
               </div>
             </div>
@@ -292,13 +291,13 @@
               <div class="form__inner">
                 <label for="email" class="form__title">E-mail</label>
                 <input type="email" name="email" id="email" placeholder="johnsmith@gmail.com"
-                  class="form__input js-form__input" required>
+                  class="form__input js-form-input" required>
               </div>
               <div class="form__inner">
                 <label for="phone" class="form__title">Телефон</label>
                 <input type="tel" name="phone" id="phone" placeholder="+7 999 999-99-99"
                   pattern="8\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}"
-                  class="form__input js-form__input" required>
+                  class="form__input js-form-input" required>
               </div>
             </div>
           </fieldset>
@@ -320,13 +319,13 @@
           <button type="submit" class="form__button button">Отправить</button>
         </form>
       </div>
-      <img src="img/image_boat@1x.jpg" width="678" height="737" alt="" class="request__img">
+      <img src="img/image_boat@1x.jpg" width="678" height="737" alt="Фото с лодкой на озере" class="request__img">
     </section>
   </main>
 
   <footer class="page-footer">
     <div class="page-footer__wrapper container">
-      <a href="#" class="page-footer__logo logo">
+      <a class="page-footer__logo logo">
         <img src="img/logo-footer.svg" width="97" height="30" alt="Alt Home Загородные дома в аренду" class="logo__img">
       </a>
       <div class="page-footer__nav navigation">
